<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.maria.quizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- First question with Radio Buttons -->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one" />

                    <RadioGroup
                        android:id="@+id/first_answer_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Brussels" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Vienna" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Zurich" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Second question with Radio Buttons -->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_two" />

                    <RadioGroup
                        android:id="@+id/second_answer_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Estonia" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Latvia" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Belarus" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Third question with Edit Text-->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_three" />

                    <EditText
                        style="@style/EditTextStyle"
                        android:id="@+id/third_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Fourth question with Checkboxes -->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Czech Republic" />

                    <CheckBox
                        android:id="@+id/fourth_answer_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Italy" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Denmark" />

                    <CheckBox
                        android:id="@+id/fourth_answer_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Portugal" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Fifth question with Checkboxes and Image View-->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/ImageViewForQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/wurst_bier" />

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_five" />

                    <CheckBox
                        android:id="@+id/fifth_answer_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nurnberger Sausages" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hummus" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Crêpe" />

                    <CheckBox
                        android:id="@+id/fifth_answer_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Bier" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Sixth question with Edit Text -->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_six" />

                    <EditText
                        style="@style/EditTextStyle"
                        android:id="@+id/sixth_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Seventh question with Radio Buttons -->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_seven" />

                    <RadioGroup
                        android:id="@+id/seventh_answer_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Oder" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Opava" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Vistula" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Elbe" />
                    </RadioGroup>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Eighth question with Edit Text-->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_eight" />

                    <EditText
                        android:id="@+id/eight_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditTextStyle"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Ninth question with Radio Buttons-->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_nine" />

                    <RadioGroup
                        android:id="@+id/ninth_answer_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="France" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Slovenia" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Hungary" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Tenth question Radio Buttons and Image View-->
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/CardViewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/ImageViewForQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/eiffel_tower" />

                    <TextView
                        style="@style/TextViewWithQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question_ten" />

                    <RadioGroup
                        android:id="@+id/tenth_answer_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Eiffel Tower" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Big Ben" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Reichstag" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sagrada Familia" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Submit button for checking answers-->
            <Button
                android:id="@+id/submit_btn"
                style="@style/SubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitBtn"
                android:text="@string/submit_btn" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
